--- a/.github/workflows/application-apache-superset.yml
+++ b/.github/workflows/application-apache-superset.yml
@@ -1,82 +1,103 @@
-name: Apache Superset
-
+name: application-apache-superset.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/application-apache-superset.yml'
-    - 'application/apache-superset/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/application-apache-superset.yml'
-    - 'application/apache-superset/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
-
   test:
-    name: "
-     Superset: ${{ matrix.superset-version }}
-     Python: ${{ matrix.python-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' Superset: ${{ matrix.superset-version }} Python: ${{ matrix.python-version
+      }} CrateDB: ${{ matrix.cratedb-version }} on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-22.04 ]
-        superset-version: [ "3.*", "4.*" ]
-        python-version: [ "3.9", "3.11" ]
-        cratedb-version: [ 'nightly' ]
-
     services:
       cratedb:
+        env:
+          CRATE_HEAP_SIZE: 4g
         image: crate/crate:${{ matrix.cratedb-version }}
         ports:
           - 4200:4200
           - 5432:5432
-        env:
-          CRATE_HEAP_SIZE: 4g
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: "pip"
-          cache-dependency-path: |
-            pyproject.toml
+          cache: pip
+          cache-dependency-path: 'pyproject.toml
+
             requirements.txt
+
             requirements-test.txt
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: |
-          pip install -r requirements.txt
+        run: 'pip install -r requirements.txt
 
+          '
+      - id: measurement-4
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Install Apache Superset ${{ matrix.superset-version }}
-        run: |
-          pip install 'apache-superset==${{ matrix.superset-version }}'
+        run: 'pip install ''apache-superset==${{ matrix.superset-version }}''
 
+          '
+      - id: measurement-6
+        name: Record Measurement After Install Apache Superset ${{ matrix.superset-version
+          }}
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install Apache Superset ${{ matrix.superset-version }}
+          task: get-measurement
       - name: Validate application/apache-superset
-        run: |
-          ngr test --accept-no-venv application/apache-superset
+        run: 'ngr test --accept-no-venv application/apache-superset
+
+          '
+      - id: measurement-8
+        name: Record Measurement After Validate application/apache-superset
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate application/apache-superset
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-22.04
+        python-version:
+          - '3.9'
+          - '3.11'
+        superset-version:
+          - 3.*
+          - 4.*
