--- a/.github/workflows/application-metabase.yml
+++ b/.github/workflows/application-metabase.yml
@@ -1,71 +1,82 @@
-name: Metabase
-
+name: application-metabase.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/application-metabase.yml'
-    - 'application/metabase/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/application-metabase.yml'
-    - 'application/metabase/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
-
   test:
-    name: "
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' CrateDB: ${{ matrix.cratedb-version }} on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ "ubuntu-22.04" ]
-        python-version: [ "3.12" ]
-        cratedb-version: [ "nightly" ]
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: "pip"
-          cache-dependency-path: |
-            pyproject.toml
+          cache: pip
+          cache-dependency-path: 'pyproject.toml
+
             requirements.txt
+
             requirements-test.txt
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
-          version: "latest"
-
+          version: latest
       - name: Install utilities
-        run: |
-          uv pip install --system -r requirements.txt
+        run: 'uv pip install --system -r requirements.txt
 
+          '
+      - id: measurement-5
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Validate application/metabase
-        run: |
-          ngr test --accept-no-venv application/metabase
+        run: 'ngr test --accept-no-venv application/metabase
+
+          '
+      - id: measurement-7
+        name: Record Measurement After Validate application/metabase
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate application/metabase
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-22.04
+        python-version:
+          - '3.12'
