--- a/.github/workflows/framework-gradio.yml
+++ b/.github/workflows/framework-gradio.yml
@@ -1,74 +1,89 @@
-name: Gradio
-
+name: framework-gradio.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/framework-gradio.yml'
-    - 'framework/gradio/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/framework-gradio.yml'
-    - 'framework/gradio/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   test:
-    name: "
-     Python: ${{ matrix.python-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-latest' ]
-        python-version: [ '3.10', '3.11', '3.12' ]
-        cratedb-version: [ 'nightly' ]
-
     services:
       cratedb:
+        env:
+          CRATE_HEAP_SIZE: 4g
         image: crate/crate:${{ matrix.cratedb-version }}
         ports:
           - 4200:4200
           - 5432:5432
-        env:
-          CRATE_HEAP_SIZE: 4g
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
+          cache: pip
+          cache-dependency-path: 'requirements.txt
+
             framework/gradio/requirements.txt
+
             framework/gradio/requirements-dev.txt
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: |
-          pip install -r requirements.txt
+        run: 'pip install -r requirements.txt
 
+          '
+      - id: measurement-4
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Validate framework/gradio
-        run: |
-          ngr test --accept-no-venv framework/gradio
+        run: 'ngr test --accept-no-venv framework/gradio
+
+          '
+      - id: measurement-6
+        name: Record Measurement After Validate framework/gradio
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate framework/gradio
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-latest
+        python-version:
+          - '3.10'
+          - '3.11'
+          - '3.12'
