--- a/.github/workflows/lang-npgsql.yml
+++ b/.github/workflows/lang-npgsql.yml
@@ -1,84 +1,97 @@
-name: C# Npgsql
-
+name: lang-npgsql.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/lang-npgsql.yml'
-    - 'by-language/csharp-npgsql/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/lang-npgsql.yml'
-    - 'by-language/csharp-npgsql/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 defaults:
   run:
     shell: bash
-
 jobs:
   test:
-    name: "
-     .NET: ${{ matrix.dotnet-version }}
-     Npgsql: ${{ matrix.npgsql-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' .NET: ${{ matrix.dotnet-version }} Npgsql: ${{ matrix.npgsql-version }}
+      CrateDB: ${{ matrix.cratedb-version }} on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-22.04' ]
-        dotnet-version: [ '9.0.x' ]
-        npgsql-version: [ '8.0.6', '9.0.2' ]
-        cratedb-version: [ 'nightly' ]
-
-    # https://docs.github.com/en/free-pro-team@latest/actions/guides/about-service-containers
     services:
       cratedb:
+        env:
+          CRATE_HEAP_SIZE: 4g
         image: crate/crate:${{ matrix.cratedb-version }}
         ports:
           - 4200:4200
           - 5432:5432
-        env:
-          CRATE_HEAP_SIZE: 4g
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up .NET ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
+          cache: pip
+          cache-dependency-path: 'requirements.txt
 
+            '
+          python-version: '3.11'
       - name: Install utilities
-        run: |
-          pip install -r requirements.txt
+        run: 'pip install -r requirements.txt
 
-      - name: Validate by-language/csharp-npgsql, Npgsql ${{ matrix.npgsql-version }}
-        run: |
-          ngr test by-language/csharp-npgsql --dotnet-version=${{ matrix.dotnet-version }} --npgsql-version=${{ matrix.npgsql-version }}
+          '
+      - id: measurement-5
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
+      - name: Validate by-language/csharp-npgsql, Npgsql ${{ matrix.npgsql-version
+          }}
+        run: 'ngr test by-language/csharp-npgsql --dotnet-version=${{ matrix.dotnet-version
+          }} --npgsql-version=${{ matrix.npgsql-version }}
+
+          '
+      - id: measurement-7
+        name: Record Measurement After Validate by-language/csharp-npgsql, Npgsql
+          ${{ matrix.npgsql-version }}
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate by-language/csharp-npgsql, Npgsql ${{ matrix.npgsql-version
+            }}
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        dotnet-version:
+          - 9.0.x
+        npgsql-version:
+          - 8.0.6
+          - 9.0.2
+        os:
+          - ubuntu-22.04
