--- a/.github/workflows/lang-python-dbapi.yml
+++ b/.github/workflows/lang-python-dbapi.yml
@@ -1,80 +1,90 @@
-name: Python DB API
-
+name: lang-python-dbapi.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/lang-python-dbapi.yml'
-    - 'by-language/python-dbapi/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/lang-python-dbapi.yml'
-    - 'by-language/python-dbapi/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   test:
-    name: "
-     Python: ${{ matrix.python-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-22.04' ]
-        python-version: [
-          '3.7',
-          '3.13',
-        ]
-        cratedb-version: [ 'nightly' ]
-
     services:
       cratedb:
+        env:
+          CRATE_HEAP_SIZE: 4g
         image: crate/crate:${{ matrix.cratedb-version }}
         ports:
           - 4200:4200
           - 5432:5432
-        env:
-          CRATE_HEAP_SIZE: 4g
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
+          cache: pip
+          cache-dependency-path: 'requirements.txt
+
             by-language/python-dbapi/requirements.txt
+
             by-language/python-dbapi/requirements-dev.txt
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Install uv
         uses: astral-sh/setup-uv@v5
-
       - name: Install utilities
-        run: |
-          uv pip install --system -r requirements.txt
+        run: 'uv pip install --system -r requirements.txt
 
+          '
+      - id: measurement-5
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Validate by-language/python-dbapi
-        run: |
-          ngr test --accept-no-venv by-language/python-dbapi
+        run: 'ngr test --accept-no-venv by-language/python-dbapi
+
+          '
+      - id: measurement-7
+        name: Record Measurement After Validate by-language/python-dbapi
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate by-language/python-dbapi
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-22.04
+        python-version:
+          - '3.7'
+          - '3.13'
