--- a/.github/workflows/notebook-jupyter.yml
+++ b/.github/workflows/notebook-jupyter.yml
@@ -1,94 +1,116 @@
-name: pandas
-
+name: notebook-jupyter.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/notebook-jupyter.yml'
-    - 'notebook/jupyter/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/notebook-jupyter.yml'
-    - 'notebook/jupyter/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   test:
-    name: "
-     Python: ${{ matrix.python-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-latest' ]
-        python-version: [ '3.8', '3.13' ]
-        cratedb-version: [ 'nightly' ]
-
     env:
       OS_TYPE: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
       UV_SYSTEM_PYTHON: true
-
+    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}'
+    runs-on: ${{ matrix.os }}
     services:
       cratedb:
+        env:
+          CRATE_HEAP_SIZE: 4g
         image: crate/crate:${{ matrix.cratedb-version }}
         ports:
           - 4200:4200
           - 5432:5432
-        env:
-          CRATE_HEAP_SIZE: 4g
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            notebook/jupyter/pyproject.toml
+          cache: pip
+          cache-dependency-path: 'notebook/jupyter/pyproject.toml
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Set up uv
         uses: astral-sh/setup-uv@v5
         with:
-          cache-dependency-glob: |
-            notebook/jupyter/pyproject.toml
+          cache-dependency-glob: 'notebook/jupyter/pyproject.toml
+
+            '
           cache-suffix: ${{ matrix.python-version }}
           enable-cache: true
-          version: "latest"
-
+          version: latest
       - name: Install project
-        run: |
-          uv pip install notebook/jupyter[all]
+        run: 'uv pip install notebook/jupyter[all]
 
+          '
+      - id: measurement-5
+        name: Record Measurement After Install project
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install project
+          task: get-measurement
       - name: Validate notebook/jupyter
-        run: |
-          cd notebook/jupyter
+        run: 'cd notebook/jupyter
+
           pytest
 
+          '
+      - id: measurement-7
+        name: Record Measurement After Validate notebook/jupyter
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate notebook/jupyter
+          task: get-measurement
       - name: Build docs for notebook/jupyter
-        run: |
-          cd notebook/jupyter
+        run: 'cd notebook/jupyter
+
           poe check
+
           poe docs-html
+
           poe docs-linkcheck
+
+          '
+      - id: measurement-9
+        name: Record Measurement After Build docs for notebook/jupyter
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Build docs for notebook/jupyter
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-latest
+        python-version:
+          - '3.8'
+          - '3.13'
