--- a/.github/workflows/testing-native-python.yml
+++ b/.github/workflows/testing-native-python.yml
@@ -1,69 +1,85 @@
-name: Native Testing with Python
-
+name: testing-native-python.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/testing-native-python.yml'
-    - 'testing/native/python**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/testing-native-python.yml'
-    - 'testing/native/python**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   test:
-    name: "
-     Python: ${{ matrix.python-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-latest', 'macos-13' ]
-        python-version: [ '3.8', '3.12' ]
-        cratedb-version: [ 'nightly' ]
-
     env:
       PIP_PRE: true
-
+    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}'
+    runs-on: ${{ matrix.os }}
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
+          cache: pip
+          cache-dependency-path: 'requirements.txt
+
             testing/native/python-pytest/requirements.txt
+
             testing/native/python-unittest/requirements.txt
 
+            '
+          python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: |
-          pip install -r requirements.txt
+        run: 'pip install -r requirements.txt
 
+          '
+      - id: measurement-4
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Validate testing/native/python-{pytest,unittest}
-        run: |
-          ngr test --accept-no-venv testing/native/python-pytest
+        run: 'ngr test --accept-no-venv testing/native/python-pytest
+
           ngr test --accept-no-venv testing/native/python-unittest
+
+          '
+      - id: measurement-6
+        name: Record Measurement After Validate testing/native/python-{pytest,unittest}
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate testing/native/python-{pytest,unittest}
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        os:
+          - ubuntu-latest
+          - macos-13
+        python-version:
+          - '3.8'
+          - '3.12'
