--- a/.github/workflows/testing-testcontainers-java.yml
+++ b/.github/workflows/testing-testcontainers-java.yml
@@ -1,70 +1,83 @@
-name: Testcontainers for Java
-
+name: testing-testcontainers-java.yml
 on:
-  pull_request:
-    branches: ~
-    paths:
-    - '.github/workflows/testing-testcontainers-java.yml'
-    - 'testing/testcontainers/java/**'
-    - '/requirements.txt'
   push:
-    branches: [ main ]
-    paths:
-    - '.github/workflows/testing-testcontainers-java.yml'
-    - 'testing/testcontainers/java/**'
-    - '/requirements.txt'
+    branches:
+      - main
 
-  # Allow job to be triggered manually.
-  workflow_dispatch:
-
-  # Run job each night after CrateDB nightly has been published.
-  schedule:
-    - cron: '0 3 * * *'
-
-# Cancel in-progress jobs when pushing to the same branch.
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   test:
-    name: "
-     Java: ${{ matrix.java-version }}
-     CrateDB: ${{ matrix.cratedb-version }}
-     on ${{ matrix.os }}"
+    name: ' Java: ${{ matrix.java-version }} CrateDB: ${{ matrix.cratedb-version }}
+      on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ 'ubuntu-latest' ]
-        java-version: [ '11', '17', '21' ]
-        cratedb-version: [ 'nightly' ]
-
     steps:
-
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Acquire sources
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
+          cache: pip
+          cache-dependency-path: 'requirements.txt
 
+            '
+          python-version: '3.11'
       - name: Install utilities
-        run: |
-          pip install -r requirements.txt
+        run: 'pip install -r requirements.txt
 
+          '
+      - id: measurement-4
+        name: Record Measurement After Install utilities
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install utilities
+          task: get-measurement
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
+          cache: gradle
+          distribution: temurin
           java-version: ${{ matrix.java-version }}
-          cache: "gradle"
-
       - name: Validate testing/testcontainers/java
-        run: |
-          ngr test testing/testcontainers/java
+        run: 'ngr test testing/testcontainers/java
+
+          '
+      - id: measurement-7
+        name: Record Measurement After Validate testing/testcontainers/java
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Validate testing/testcontainers/java
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+    strategy:
+      fail-fast: false
+      matrix:
+        cratedb-version:
+          - nightly
+        java-version:
+          - '11'
+          - '17'
+          - '21'
+        os:
+          - ubuntu-latest
