--- a/.github/workflows/framework-dbt.yml
+++ b/.github/workflows/framework-dbt.yml
@@ -9,8 +9,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   test:
-    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
-      }} on ${{ matrix.os }}'
+    name:
+      " Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     services:
       cratedb:
@@ -33,12 +34,12 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'framework/dbt/basic/requirements.txt
+          cache-dependency-path: "framework/dbt/basic/requirements.txt
 
-            '
+            "
           python-version: ${{ matrix.python-version }}
       - name: Validate framework/dbt/basic
-        run: 'cd framework/dbt/basic
+        run: "cd framework/dbt/basic
 
           pip install -r requirements.txt
 
@@ -46,7 +47,7 @@ jobs:
 
           dbt test --debug
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Validate framework/dbt/basic
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -55,7 +56,7 @@ jobs:
           label: Validate framework/dbt/basic
           task: get-measurement
       - name: Validate framework/dbt/materialize
-        run: 'cd framework/dbt/materialize
+        run: "cd framework/dbt/materialize
 
           pip install -r requirements.txt
 
@@ -65,7 +66,7 @@ jobs:
 
           dbt test --debug
 
-          '
+          "
       - id: measurement-6
         name: Record Measurement After Validate framework/dbt/materialize
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -84,8 +85,8 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption7
+          path: total_energy_consumption7.json
     strategy:
       fail-fast: false
       matrix:
@@ -94,5 +95,5 @@ jobs:
         os:
           - ubuntu-latest
         python-version:
-          - '3.9'
-          - '3.12'
+          - "3.9"
+          - "3.12"
