--- a/.github/workflows/framework-streamlit.yml
+++ b/.github/workflows/framework-streamlit.yml
@@ -9,8 +9,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   test:
-    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
-      }} on ${{ matrix.os }}'
+    name:
+      " Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     services:
       cratedb:
@@ -33,18 +34,18 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'requirements.txt
+          cache-dependency-path: "requirements.txt
 
             framework/streamlit/requirements.txt
 
             framework/streamlit/requirements-dev.txt
 
-            '
+            "
           python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: 'pip install -r requirements.txt
+        run: "pip install -r requirements.txt
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Install utilities
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -53,9 +54,9 @@ jobs:
           label: Install utilities
           task: get-measurement
       - name: Validate framework/streamlit
-        run: 'ngr test --accept-no-venv framework/streamlit
+        run: "ngr test --accept-no-venv framework/streamlit
 
-          '
+          "
       - id: measurement-6
         name: Record Measurement After Validate framework/streamlit
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -74,8 +75,8 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption11
+          path: total_energy_consumption11.json
     strategy:
       fail-fast: false
       matrix:
@@ -84,6 +85,6 @@ jobs:
         os:
           - ubuntu-latest
         python-version:
-          - '3.10'
-          - '3.11'
-          - '3.12'
+          - "3.10"
+          - "3.11"
+          - "3.12"
