--- a/.github/workflows/lang-python-sqlalchemy.yml
+++ b/.github/workflows/lang-python-sqlalchemy.yml
@@ -11,8 +11,9 @@ jobs:
   test:
     env:
       PIP_PRE: true
-    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
-      }} on ${{ matrix.os }}'
+    name:
+      " Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     services:
       cratedb:
@@ -35,18 +36,18 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'requirements.txt
+          cache-dependency-path: "requirements.txt
 
             by-language/python-sqlalchemy/requirements.txt
 
             by-language/python-sqlalchemy/requirements-dev.txt
 
-            '
+            "
           python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: 'pip install -r requirements.txt
+        run: "pip install -r requirements.txt
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Install utilities
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -55,9 +56,9 @@ jobs:
           label: Install utilities
           task: get-measurement
       - name: Validate by-language/python-sqlalchemy
-        run: 'ngr test --accept-no-venv by-language/python-sqlalchemy
+        run: "ngr test --accept-no-venv by-language/python-sqlalchemy
 
-          '
+          "
       - id: measurement-6
         name: Record Measurement After Validate by-language/python-sqlalchemy
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -76,8 +77,8 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption18
+          path: total_energy_consumption18.json
     strategy:
       fail-fast: false
       matrix:
@@ -86,5 +87,5 @@ jobs:
         os:
           - ubuntu-latest
         python-version:
-          - '3.11'
-          - '3.12'
+          - "3.11"
+          - "3.12"
