--- a/.github/workflows/lang-ruby.yml
+++ b/.github/workflows/lang-ruby.yml
@@ -9,8 +9,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   test:
-    name: ' Ruby: ${{ matrix.ruby-version }} CrateDB: ${{ matrix.cratedb-version }}
-      on ${{ matrix.os }}'
+    name:
+      " Ruby: ${{ matrix.ruby-version }} CrateDB: ${{ matrix.cratedb-version }}
+      on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     services:
       cratedb:
@@ -33,14 +34,14 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'requirements.txt
+          cache-dependency-path: "requirements.txt
 
-            '
-          python-version: '3.11'
+            "
+          python-version: "3.11"
       - name: Install utilities
-        run: 'pip install -r requirements.txt
+        run: "pip install -r requirements.txt
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Install utilities
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -64,9 +65,9 @@ jobs:
           label: Install "libpq-dev"
           task: get-measurement
       - name: Validate by-language/ruby
-        run: 'ngr test by-language/ruby
+        run: "ngr test by-language/ruby
 
-          '
+          "
       - id: measurement-9
         name: Record Measurement After Validate by-language/ruby
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -85,8 +86,8 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption20
+          path: total_energy_consumption20.json
     strategy:
       fail-fast: false
       matrix:
@@ -95,9 +96,9 @@ jobs:
         os:
           - ubuntu-latest
         ruby-version:
-          - '2.7'
-          - '3.0'
-          - '3.1'
-          - '3.2'
+          - "2.7"
+          - "3.0"
+          - "3.1"
+          - "3.2"
           - truffleruby
           - truffleruby+graalvm
