--- a/.github/workflows/testing-native-python.yml
+++ b/.github/workflows/testing-native-python.yml
@@ -11,8 +11,9 @@ jobs:
   test:
     env:
       PIP_PRE: true
-    name: ' Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
-      }} on ${{ matrix.os }}'
+    name:
+      " Python: ${{ matrix.python-version }} CrateDB: ${{ matrix.cratedb-version
+      }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     steps:
       - name: Start Energy Measurement
@@ -27,18 +28,18 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'requirements.txt
+          cache-dependency-path: "requirements.txt
 
             testing/native/python-pytest/requirements.txt
 
             testing/native/python-unittest/requirements.txt
 
-            '
+            "
           python-version: ${{ matrix.python-version }}
       - name: Install utilities
-        run: 'pip install -r requirements.txt
+        run: "pip install -r requirements.txt
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Install utilities
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -47,11 +48,11 @@ jobs:
           label: Install utilities
           task: get-measurement
       - name: Validate testing/native/python-{pytest,unittest}
-        run: 'ngr test --accept-no-venv testing/native/python-pytest
+        run: "ngr test --accept-no-venv testing/native/python-pytest
 
           ngr test --accept-no-venv testing/native/python-unittest
 
-          '
+          "
       - id: measurement-6
         name: Record Measurement After Validate testing/native/python-{pytest,unittest}
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -70,8 +71,8 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption29
+          path: total_energy_consumption29.json
     strategy:
       fail-fast: false
       matrix:
@@ -81,5 +82,5 @@ jobs:
           - ubuntu-latest
           - macos-13
         python-version:
-          - '3.8'
-          - '3.12'
+          - "3.8"
+          - "3.12"
