--- a/.github/workflows/testing-testcontainers-java.yml
+++ b/.github/workflows/testing-testcontainers-java.yml
@@ -9,8 +9,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   test:
-    name: ' Java: ${{ matrix.java-version }} CrateDB: ${{ matrix.cratedb-version }}
-      on ${{ matrix.os }}'
+    name:
+      " Java: ${{ matrix.java-version }} CrateDB: ${{ matrix.cratedb-version }}
+      on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     steps:
       - name: Start Energy Measurement
@@ -25,14 +26,14 @@ jobs:
         with:
           architecture: x64
           cache: pip
-          cache-dependency-path: 'requirements.txt
+          cache-dependency-path: "requirements.txt
 
-            '
-          python-version: '3.11'
+            "
+          python-version: "3.11"
       - name: Install utilities
-        run: 'pip install -r requirements.txt
+        run: "pip install -r requirements.txt
 
-          '
+          "
       - id: measurement-4
         name: Record Measurement After Install utilities
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -47,9 +48,9 @@ jobs:
           distribution: temurin
           java-version: ${{ matrix.java-version }}
       - name: Validate testing/testcontainers/java
-        run: 'ngr test testing/testcontainers/java
+        run: "ngr test testing/testcontainers/java
 
-          '
+          "
       - id: measurement-7
         name: Record Measurement After Validate testing/testcontainers/java
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
@@ -68,16 +69,16 @@ jobs:
       - name: Upload Energy Consumption Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-energy-consumption
-          path: total_energy_consumption.json
+          name: total-energy-consumption30
+          path: total_energy_consumption30.json
     strategy:
       fail-fast: false
       matrix:
         cratedb-version:
           - nightly
         java-version:
-          - '11'
-          - '17'
-          - '21'
+          - "11"
+          - "17"
+          - "21"
         os:
           - ubuntu-latest
