--- a/.github/workflows/application-metabase.yml
+++ b/.github/workflows/application-metabase.yml
@@ -48,9 +48,8 @@ jobs:
           label: Install utilities
           task: get-measurement
       - name: Validate application/metabase
-        run: "ngr test --accept-no-venv application/metabase
-
-          "
+        run: |
+          ngr test --accept-no-venv application/metabase
       - id: measurement-7
         name: Record Measurement After Validate application/metabase
         uses: green-coding-solutions/eco-ci-energy-estimation@v4
